# student-management-system

./: .env  main.py  pyproject.toml
Chapter 2/: diameter_of_circle.py  exponentialoperator.py  fixing_the_code.py  investment.py  multiplesofnumbers.py  oddandevennumber.py  print_congratulation.py  separateintegers.py  smallestandlargest.py  specialcharacter.py
Chapter 3/: computer_prompt.py  cost_of_driving.py  dropped text.txt  guessgame.py  investment_return.py  missing_code.py  reimplement_if_else.py  separaing_integers.py  smallestandlargest.py  table_of_square.py  take_in_grade.py
Classwork/: Password.py  Roi_Calculator.py  bill.py  check_password.py  checkpassword.py  even_number.py  guess_game_two.py  repeated_in_word.py  validating_indentation.py
Corn_flakes/: Calculating_sum_of_multiples.py  Patterns.py  check_score.py  even_numbers.py  multiples_of_three.py  multiplication_table.py  right_triangle.py
Java Spicy-snack/: Calculator.java  FatherAndSonsAge.java  PasswordChecker.java  ScoreBoard.java
Pizza Wahala/: Pizza Store.py  PizzaStore.java  pizza_store.js  pizza_store.py
SK Task/: perfect_square.go  perfect_square.py  perfect_square_test.py  pybank_functions.py  pybank_test.py
Spicy-Snack/: calculator.py  fatherandsonage.py  passwordchecker.py  scoreboard.py
Task_on_loops/: guess_game.py  numberexponential.py  positive_and_negative_numbers.py  primenumber.py  sumofnumber.py
WEEKEND_FUN/: bmi.py  dividenumbers.py  largestofthree.py  quadrantfinder.py  rockpaperscissors.py  ticketpricecalculator.py  vowelandconstant.py  yourbillcalculator.py
(+67 files in other folders)
