[project]
name = "student-course-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anyio>=4.13.0",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "mongomock>=4.3.0",
    "motor>=3.7.1",
    "pydantic[email]>=2.12.5",
    "pymongo>=4.16.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.43.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
